--- a/test.conf
+++ b/test.conf
@@ -66,6 +66,7 @@ cc_fengfa_skill = {
 		fix_time = 7.7,
 		freeze_time = 1,
 		use_time = 0,
+		use_pic = {},
 		unuse_pic = {},
 	},
 	
@@ -103,6 +104,52 @@ cc_fengfa_skill = {
 		use_pic = {},
 		unuse_pic = {},
 	},
+	--Õº1
+	pic1 = {
+		first = {'q','a',},
+		second = 'q',
+	},	
+	--Õº2
+	pic2 = {
+		first = {'w',},
+		second = 'w',	
+	},
+	--Õº3
+	pic3 = {
+		first = {'e',},
+		second = 'e',	
+	},	
+	--Õº4
+	pic4 = {
+		first = {'q','f','t',},
+		second = 't',		
+	},	
+	--Õº5
+	pic5 = {
+		first = {'y','r','f',},
+		second = 'y',		
+	},		
+	--Õº6
+	pic6 = {
+		first = {'q','e','d',},
+		second = 'e',		
+	},
+	--Õº7
+	pic7 = {
+		first = {'h','g',},
+		second = 'h',	
+	},		
+	--Õº8
+	pic8 = {
+		first = {'q',},
+		second = 'q',			
+	},	
+	--Õº9
+	pic9 = {
+		first = {'q',},
+		second = 'q',			
+	},
+	
 }
 --’À∫≈÷–Ω«…´ººƒ‹–≈œ¢
 cc_skills = {
@@ -146,8 +193,8 @@ gc_software_conf ={
 --’À∫≈–≈œ¢
 gc_users = {
 	{
-		user = "2844026538",        --’À∫≈
-		password = "wu851018ying",  --’À∫≈√‹¬Î
+		user = "2757938108",        --’À∫≈
+		password = "rhvjem138",  --’À∫≈√‹¬Î
 		roles = 16,                 --’À∫≈÷–Ω«…´∏ˆ ˝
 		skills = cc_skills,
 	},
