--- a/gpl.conf
+++ b/gpl.conf
@@ -1,9 +1,9 @@
 mc = {
-	file = "gp.lic",
-	machine = "H0H6UEOAG0W7N2O1J3N1",
-	srv = "0.0.0.0",
+	machine = "",
+	srv = "gp.dtflavour.com",
+	port = "8787",
 	gen_date = "2018-11-01 00:00:00",
 	valid_date = "2018-12-01 00:00:00",
-	version = 1,
+	version = 100,
 	type = 0
 }
