--- a/gpu.conf
+++ b/gpu.conf
@@ -1,5 +1,6 @@
 ui = {
-	user = "15011457740",
-	pwd = "8zIju2Kt",
-	uuid = "db1ac97cf2bb5bab8481b0614346852f",
+	user = "15011457740",                          --’À∫≈
+	pwd = "8zIju2Kt",                              --√‹¬Î
+	uuid = "db1ac97cf2bb5bab8481b0614346852f",     --ø®√‹
+	price = "",                                    --º€∏Ò
 }
