--- a/test.conf
+++ b/test.conf
@@ -9,7 +9,7 @@ cc_fengfa_skill = {
 		freeze_time = 1,
 		use_time = 0,
 		use_pic = {1,4,8,9},
-		unuse_pic = {},
+		unuse_pic = {5},
 	},
 	--w--主技能
 	w = {
@@ -25,7 +25,7 @@ cc_fengfa_skill = {
 		freeze_time = 1,
 		use_time = 0,
 		use_pic = {3},
-		unuse_pic = {},
+		unuse_pic = {5},
 	},
 	--r--主技能
 	r = {
@@ -76,7 +76,7 @@ cc_fengfa_skill = {
 		freeze_time = 0.5,
 		use_time = 0,
 		use_pic = {},
-		unuse_pic = {1},
+		unuse_pic = {1,5},
 		
 	},
 	--f--辅技能
@@ -193,9 +193,9 @@ gc_software_conf ={
 --账号信息
 gc_users = {
 	{
-		user = "2757938108",        --账号
-		password = "rhvjem138",  --账号密码
-		roles = 16,                 --账号中角色个数
+		user = "2844026538",        --游戏账号
+		password = "wu851018ying0",  --游戏账号密码
+		roles = 12,                 --游戏账号中角色个数
 		skills = cc_skills,
 	},
 }
