--- a/gps.conf
+++ b/gps.conf
@@ -1,9 +1,20 @@
+----必填
+cc_your_roles = 12
+cc_your_delay_time = 0
+----选填
+cc_your_path = ""
+cc_your_user = "" 
+cc_your_password = ""
+
+
+
+
+
 -------------------------------------------------------------------------------
 ------------------------------user 1 skills------------------------------------
 -------------------------------------------------------------------------------
 
 cc_fengfa_skill = {
-	--q--主技能
 	q = {
 		fix_time = 22.5,
 		freeze_time = 1,
@@ -11,7 +22,6 @@ cc_fengfa_skill = {
 		use_pic = {1,4,8,9},
 		unuse_pic = {5},
 	},
-	--w--主技能
 	w = {
 		fix_time = 45,
 		freeze_time = 1,
@@ -19,7 +29,6 @@ cc_fengfa_skill = {
 		use_pic = {2},
 		unuse_pic = {},
 	},
-	--e--主技能
 	e ={
 		fix_time = 36,
 		freeze_time = 1,
@@ -27,7 +36,6 @@ cc_fengfa_skill = {
 		use_pic = {3},
 		unuse_pic = {5},
 	},
-	--r--主技能
 	r = {
 		fix_time = 27,
 		freeze_time = 1,
@@ -35,8 +43,6 @@ cc_fengfa_skill = {
 		use_pic = {5},
 		unuse_pic = {},
 	},
-	
-	--t--主技能
 	t ={
 		fix_time = 40.5,
 		freeze_time = 1,
@@ -44,7 +50,6 @@ cc_fengfa_skill = {
 		use_pic = {4},
 		unuse_pic = {},
 	},
-	--y--主技能
 	y = {
 		fix_time = 40.5,
 		freeze_time = 2,
@@ -52,8 +57,6 @@ cc_fengfa_skill = {
 		use_pic = {5},
 		unuse_pic = {},
 	},
-	
-	--a--辅技能
 	a = {
 		fix_time = 14.5,
 		freeze_time = 1,
@@ -61,7 +64,6 @@ cc_fengfa_skill = {
 		use_pic = {},
 		unuse_pic = {},
 	},
-	--s--辅技能
 	s = {
 		fix_time = 7.7,
 		freeze_time = 1,
@@ -70,7 +72,6 @@ cc_fengfa_skill = {
 		unuse_pic = {},
 	},
 	
-	--d--辅技能
 	d = {
 		fix_time = 12.6,
 		freeze_time = 0.5,
@@ -79,7 +80,6 @@ cc_fengfa_skill = {
 		unuse_pic = {1,5},
 		
 	},
-	--f--辅技能
 	f={
 		fix_time = 9,
 		freeze_time = 0,
@@ -87,8 +87,6 @@ cc_fengfa_skill = {
 		use_pic = {},
 		unuse_pic = {1,2,3},
 	},
-	
-	--g--大招2
 	g = {
 		fix_time = 145,
 		freeze_time = 3.5,
@@ -96,7 +94,6 @@ cc_fengfa_skill = {
 		use_pic = {},
 		unuse_pic = {},
 	},
-	--h--大招1
 	h = {
 		fix_time = 180,
 		freeze_time = 5,
@@ -104,76 +101,62 @@ cc_fengfa_skill = {
 		use_pic = {},
 		unuse_pic = {},
 	},
-	--图1
 	pic1 = {
 		first = {'q','a',},
 		second = 'q',
 	},	
-	--图2
 	pic2 = {
 		first = {'w',},
 		second = 'w',	
 	},
-	--图3
 	pic3 = {
 		first = {'e',},
 		second = 'e',	
 	},	
-	--图4
 	pic4 = {
 		first = {'q','f','t',},
 		second = 't',		
 	},	
-	--图5
 	pic5 = {
 		first = {'y','r','f',},
 		second = 'y',		
 	},		
-	--图6
 	pic6 = {
 		first = {'q','e','d',},
 		second = 'e',		
 	},
-	--图7
 	pic7 = {
 		first = {'h','g',},
 		second = 'h',	
 	},		
-	--图8
 	pic8 = {
 		first = {'q',},
 		second = 'q',			
 	},	
-	--图9
 	pic9 = {
 		first = {'q',},
 		second = 'q',			
 	},
 	
 }
---账号中角色技能信息
 cc_skills = {
-	cc_fengfa_skill, --角色1技能
-	cc_fengfa_skill, --角色2技能
-	cc_fengfa_skill, --角色3技能
-	cc_fengfa_skill, --角色4技能
-	cc_fengfa_skill, --角色5技能
-	cc_fengfa_skill, --角色6技能
-	cc_fengfa_skill, --角色7技能
-	cc_fengfa_skill, --角色8技能
-	cc_fengfa_skill, --角色9技能
-	cc_fengfa_skill, --角色10技能
-	cc_fengfa_skill, --角色11技能
-	cc_fengfa_skill, --角色12技能
-	cc_fengfa_skill, --角色13技能
-	cc_fengfa_skill, --角色14技能
-	cc_fengfa_skill, --角色15技能
-	cc_fengfa_skill, --角色16技能
+	cc_fengfa_skill, --1
+	cc_fengfa_skill, --2
+	cc_fengfa_skill, --3
+	cc_fengfa_skill, --4
+	cc_fengfa_skill, --5
+	cc_fengfa_skill, --6
+	cc_fengfa_skill, --7
+	cc_fengfa_skill, --8
+	cc_fengfa_skill, --9
+	cc_fengfa_skill, --10
+	cc_fengfa_skill, --11
+	cc_fengfa_skill, --12
+	cc_fengfa_skill, --13
+	cc_fengfa_skill, --14
+	cc_fengfa_skill, --15
+	cc_fengfa_skill, --16
 }
-
--------------------------------------------------------------------------------
-------------------------------user 2 skills------------------------------------
--------------------------------------------------------------------------------
 
 -------------------------------------------------------------------------------
 ------------------------------user 2 skills------------------------------------
@@ -182,20 +165,21 @@ cc_skills = {
 -------------------------------------------------------------------------------
 --------------------------------custom conf------------------------------------
 -------------------------------------------------------------------------------
---硬件id
 gc_hardware_conf ={
 	vid = 0x5188,
 	pid = 0x1801,
 }
+-------------------------------------------------------------------------------
 gc_software_conf ={
-	exe_path = "C:\\Users\\coolx\\Desktop\\tool\\地下城与勇士",
+	exe_path = cc_your_path,
+	delay_time = cc_your_delay_time,
 }
---账号信息
+-------------------------------------------------------------------------------
 gc_users = {
 	{
-		user = "2844026538",        --游戏账号
-		password = "wu851018ying0",  --游戏账号密码
-		roles = 12,                 --游戏账号中角色个数
+		user = cc_your_user,
+		password = cc_your_password,
+		roles = cc_your_roles,
 		skills = cc_skills,
 	},
 }
