--- a/gpu.conf
+++ b/gpu.conf
@@ -1,6 +1,10 @@
 ui = {
-	user = "15011457740",                          --账号
-	pwd = "8zIju2Kt",                              --密码
-	uuid = "db1ac97cf2bb5bab8481b0614346852f",     --卡密
-	price = "",                                    --价格
+-------------------必填-------------------------
+	user = "15011457740",                          
+	pwd = "8zIju2Kt",                              
+	uuid = "db1ac97cf2bb5bab8481b0614346852f",
+------------------附加信息----------------------
+	price = "",                                    
+	date = "",
+------------------------------------------------
 }
