--- a/gps.conf
+++ b/gps.conf
@@ -114,11 +114,11 @@ cc_fengfa_skill = {
 		second = 'e',	
 	},	
 	pic4 = {
-		first = {'q','f','t',},
+		first = {'q','r','t',},
 		second = 't',		
 	},	
 	pic5 = {
-		first = {'y','r','f',},
+		first = {'y','f',},
 		second = 'y',		
 	},		
 	pic6 = {
