--- a/gps_xiuluo.conf
+++ b/gps_xiuluo.conf
@@ -14,66 +14,66 @@ cc_your_password = ""
 ------------------------------user 1 skills------------------------------------
 -------------------------------------------------------------------------------
 
-cc_fengfa_skill = {
+cc_xiuluo_skill = {
 	q = {
-		fix_time = 22.5,
+		fix_time = 35,
 		freeze_time = 1,
 		use_time = 0,
 		use_pic = {1,4,8,9},
 		unuse_pic = {5},
 	},
 	w = {
-		fix_time = 45,
+		fix_time = 0,
 		freeze_time = 1,
 		use_time = 0,
-		use_pic = {2,5,6},
+		use_pic = {2},
 		unuse_pic = {},
 	},
 	e ={
-		fix_time = 36,
+		fix_time = 40,
 		freeze_time = 1,
 		use_time = 0,
 		use_pic = {3},
 		unuse_pic = {5},
 	},
 	r = {
-		fix_time = 27,
+		fix_time = 15,
 		freeze_time = 1,
 		use_time = 0,
 		use_pic = {5},
 		unuse_pic = {},
 	},
 	t ={
-		fix_time = 40.5,
+		fix_time = 20,
 		freeze_time = 1,
 		use_time = 0,
 		use_pic = {4},
 		unuse_pic = {},
 	},
 	y = {
-		fix_time = 40.5,
-		freeze_time = 2,
+		fix_time = 45,
+		freeze_time = 1,
 		use_time = 0,
 		use_pic = {5},
 		unuse_pic = {},
 	},
 	a = {
-		fix_time = 14.5,
+		fix_time = 3,
 		freeze_time = 1,
 		use_time = 0,
 		use_pic = {},
-		unuse_pic = {4},
+		unuse_pic = {},
 	},
 	s = {
-		fix_time = 7.7,
+		fix_time = 7.5,
 		freeze_time = 1,
 		use_time = 0,
 		use_pic = {},
-		unuse_pic = {4},
+		unuse_pic = {6},
 	},
 	
 	d = {
-		fix_time = 12.6,
+		fix_time = 7,
 		freeze_time = 0.5,
 		use_time = 0,
 		use_pic = {},
@@ -81,32 +81,33 @@ cc_fengfa_skill = {
 		
 	},
 	f={
-		fix_time = 9,
+		fix_time = 45,
 		freeze_time = 0,
+		continue_time = 1,
 		use_time = 0,
 		use_pic = {},
-		unuse_pic = {1,2,3,4},
+		unuse_pic = {1,2,3},
 	},
 	g = {
-		fix_time = 145,
-		freeze_time = 3.5,
+		fix_time = 0,
+		freeze_time = 1,
 		use_time = 0,
 		use_pic = {},
-		unuse_pic = {},
+		unuse_pic = {1,2,3,4,5},
 	},
 	h = {
 		fix_time = 180,
-		freeze_time = 5,
+		freeze_time = 3,
 		use_time = 0,
 		use_pic = {},
-		unuse_pic = {},
+		unuse_pic = {1,2,3,4,5,6},
 	},
 	pic1 = {
-		first = {'q','a',},
-		second = 'q',
+		first = {'a','s','d'},
+		second = 'a',
 	},	
 	pic2 = {
-		first = {'w',},
+		first = {'w','w','w',},
 		second = 'w',	
 	},
 	pic3 = {
@@ -114,19 +115,19 @@ cc_fengfa_skill = {
 		second = 'e',	
 	},	
 	pic4 = {
-		first = {'q','r','t',},
+		first = {'t','r','d',},
 		second = 't',		
 	},	
 	pic5 = {
-		first = {'y','f',},
+		first = {'y','s',},
 		second = 'y',		
 	},		
 	pic6 = {
-		first = {'q','e','d',},
-		second = 'e',		
+		first = {'g','g',},
+		second = 'g',		
 	},
 	pic7 = {
-		first = {'h','g',},
+		first = {'t','h','q','r','e'},
 		second = 'h',	
 	},		
 	pic8 = {
@@ -139,23 +140,24 @@ cc_fengfa_skill = {
 	},
 	
 }
+
 cc_skills = {
-	cc_fengfa_skill, --1
-	cc_fengfa_skill, --2
-	cc_fengfa_skill, --3
-	cc_fengfa_skill, --4
-	cc_fengfa_skill, --5
-	cc_fengfa_skill, --6
-	cc_fengfa_skill, --7
-	cc_fengfa_skill, --8
-	cc_fengfa_skill, --9
-	cc_fengfa_skill, --10
-	cc_fengfa_skill, --11
-	cc_fengfa_skill, --12
-	cc_fengfa_skill, --13
-	cc_fengfa_skill, --14
-	cc_fengfa_skill, --15
-	cc_fengfa_skill, --16
+	cc_xiuluo_skill, --1
+	cc_xiuluo_skill, --2
+	cc_xiuluo_skill, --3
+	cc_xiuluo_skill, --4
+	cc_xiuluo_skill, --5
+	cc_xiuluo_skill, --6
+	cc_xiuluo_skill, --7
+	cc_xiuluo_skill, --8
+	cc_xiuluo_skill, --9
+	cc_xiuluo_skill, --10
+	cc_xiuluo_skill, --11
+	cc_xiuluo_skill, --12
+	cc_xiuluo_skill, --13
+	cc_xiuluo_skill, --14
+	cc_xiuluo_skill, --15
+	cc_xiuluo_skill, --16
 }
 
 -------------------------------------------------------------------------------
