--- a/gps_xiuluo.conf
+++ b/gps_xiuluo.conf
@@ -103,11 +103,11 @@ cc_xiuluo_skill = {
 		unuse_pic = {1,2,3,4,5,6},
 	},
 	pic1 = {
-		first = {'a','s','d'},
+		first = {'a','s','d','q',},
 		second = 'a',
 	},	
 	pic2 = {
-		first = {'w','w','w',},
+		first = {'w','w',},
 		second = 'w',	
 	},
 	pic3 = {
