--- a/gps_xiuluo.conf
+++ b/gps_xiuluo.conf
@@ -19,12 +19,13 @@ cc_xiuluo_skill = {
 		fix_time = 35,
 		freeze_time = 1,
 		use_time = 0,
-		use_pic = {1,4,8,9},
+		use_pic = {1,5,8,9},
 		unuse_pic = {5},
 	},
 	w = {
-		fix_time = 0,
-		freeze_time = 1,
+		fix_time = 20,
+		freeze_time = 0.5,
+		twice_time = 1,
 		use_time = 0,
 		use_pic = {2},
 		unuse_pic = {},
@@ -82,14 +83,14 @@ cc_xiuluo_skill = {
 	},
 	f={
 		fix_time = 45,
-		freeze_time = 0,
+		freeze_time = 1,
 		continue_time = 1,
 		use_time = 0,
 		use_pic = {},
 		unuse_pic = {1,2,3},
 	},
 	g = {
-		fix_time = 0,
+		fix_time = 1,
 		freeze_time = 1,
 		use_time = 0,
 		use_pic = {},
@@ -103,11 +104,11 @@ cc_xiuluo_skill = {
 		unuse_pic = {1,2,3,4,5,6},
 	},
 	pic1 = {
-		first = {'a','s','d','q',},
+		first = {'a','s','d',},
 		second = 'a',
 	},	
 	pic2 = {
-		first = {'w','w',},
+		first = {'w',},
 		second = 'w',	
 	},
 	pic3 = {
@@ -119,12 +120,12 @@ cc_xiuluo_skill = {
 		second = 't',		
 	},	
 	pic5 = {
-		first = {'y','s',},
+		first = {'y','s','q',},
 		second = 'y',		
 	},		
 	pic6 = {
 		first = {'g','g',},
-		second = 'g',		
+		second = 's',		
 	},
 	pic7 = {
 		first = {'t','h','q','r','e'},
