--- a/gps.conf
+++ b/gps.conf
@@ -1,6 +1,7 @@
 ----±ØÌî
 cc_your_roles = 12
 cc_your_delay_time = 0
+cc_your_decompose_times = 1
 ----Ñ¡Ìî
 cc_your_path = ""
 cc_your_user = "" 
@@ -96,7 +97,7 @@ cc_fengfa_skill = {
 	},
 	h = {
 		fix_time = 180,
-		freeze_time = 5,
+		freeze_time = 4.5,
 		use_time = 0,
 		use_pic = {},
 		unuse_pic = {},
@@ -173,6 +174,7 @@ gc_hardware_conf ={
 gc_software_conf ={
 	exe_path = cc_your_path,
 	delay_time = cc_your_delay_time,
+	decompose_times = cc_your_decompose_times,
 }
 -------------------------------------------------------------------------------
 gc_users = {
