--- a/gps_xiuluo.conf
+++ b/gps_xiuluo.conf
@@ -1,6 +1,7 @@
 ----±ØÌî
 cc_your_roles = 12
 cc_your_delay_time = 0
+cc_your_decompose_times = 1
 ----Ñ¡Ìî
 cc_your_path = ""
 cc_your_user = "" 
@@ -90,7 +91,7 @@ cc_xiuluo_skill = {
 		unuse_pic = {1,2,3},
 	},
 	g = {
-		fix_time = 1,
+		fix_time = 5,
 		freeze_time = 1,
 		use_time = 0,
 		use_pic = {},
@@ -125,7 +126,7 @@ cc_xiuluo_skill = {
 	},		
 	pic6 = {
 		first = {'g','g',},
-		second = 's',		
+		second = 'g',		
 	},
 	pic7 = {
 		first = {'t','h','q','r','e'},
@@ -176,6 +177,7 @@ gc_hardware_conf ={
 gc_software_conf ={
 	exe_path = cc_your_path,
 	delay_time = cc_your_delay_time,
+	decompose_times = cc_your_decompose_times,
 }
 -------------------------------------------------------------------------------
 gc_users = {
